# log-manager

./: Cargo.toml  diesel.toml
migrations/2023-10-29-073935_log_table/: up.sql
src/: error.rs  lib.rs  logs.rs  main.rs  manager.rs  schema.rs
src/database/: mod.rs  model.rs
